src/test/resources/tests/43_global_prefix_error.expected
Runtime error: Runtime Error at line 5:11: Variable 'x' is not defined in local scope. Use ::x to access the global variable.
