src/test/resources/tests/43_global_prefix_error.tee
// Test: Error when reading global without :: inside function
x = 10

function badRead() do
    return x
end

badRead()
